<resources>
    <string name="app_name">Lab3SimpleCalculator</string>
    <string name="button07">7</string>
    <string name="button08">8</string>
    <string name="button09">9</string>
    <string name="buttondiv">\\u00F7</string>
    <string name="button04">4</string>
    <string name="button05">5</string>
    <string name="button06">6</string>
    <string name="buttonMu">\\u00D7</string>
    <string name="button01">1</string>
    <string name="button02">2</string>
    <string name="button03">3</string>
    <string name="buttonSu">\\u2212</string>
    <string name="buttonAd">\\u002B</string>
    <string name="button0">0</string>
    <string name="buttonC">C</string>
    <string name="buttonDo">\\u002E</string>
    <string name="buttonE">\\u003D</string>
    <string name="buttonCE">CE</string>
    <string name="buttonDiv">/</string>
    <string name="buttonMulti">*</string>
    <string name="buttonSub">-</string>
    <string name="buttonDot">.</string>
    <string name="buttonAdd">+</string>
    <string name="buttonEql">=</string>
    <string name="buttonEq">=</string>
    <string name="buttonMult">*</string>
</resources>